FO: Fix word-break in product characteristics

--- a/themes/classic/_dev/css/components/products.scss
+++ b/themes/classic/_dev/css/components/products.scss
@@ -439,7 +439,7 @@
       padding: $small-space;
       margin-right: $small-space;
       min-height: rem(40px);
-      word-break: break-all;
+      word-break: break-word;
       &:nth-of-type(even) {
         background: $gray-lighter;
       }
